[tool.poetry]
name = "ML_Abstract_Analysis"
version = "0.1.0"
description = ""
authors = ["Drew Kalasky"]

[tool.poetry.dependencies]
python = "~3.12.0"
networkx = "^2.8.5"
catboost = "*"
shap = "*"
inquirer = "*"
optuna = "*"
numpy = "1.26"
pandas

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "serial",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
